--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>       
 </body>
-<div id="flip">ddddd
-    <div class="goods">  
-       <img src="images/box1.png" />  
-   </div>  
+<div id="flip">
+    <div class="logo">这是一个logo</div>
+    <div class="someting"></div>
+  <div class="goods" id="panel">  
+    <img src="up.png" />  
+</div>    
 </div>
-
-<div id="panel">H点我收起</div>
 
 <div id="aaa">
  我是页面内容
