--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <script src="index.js"></script>
 </head>
 <body>       
-</body>
-<div id="flip">
+    <div class="line-it-button" data-lang="zh_Hant" data-type="friend" data-lineid="@quyi28266687" data-count="true" data-home="true" style="display: none;"></div>
+    <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+<div class="line-it-button" data-lang="en" data-type="friend" data-lineid="@quyi28266687" data-count="true" data-home="true" style="display: none;"></div>
+ <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+<!-- <div id="flip">
     <div class="logo">这是一个logo</div>
     <div class="someting"></div>
   <div class="goods" id="panel">  
@@ -23,7 +26,7 @@
 </div>
 <div class="eee"></div>
 <div class="eee"></div>
-</div>
-
+</div> -->
+</body>
 </html>
 
